tests/macros/duplicate/validate_on_key.stderr
error: duplicate option `validate_on_key`
 --> tests/macros/duplicate/validate_on_key.rs:4:9
  |
4 |         validate_on_key: todo!(),
  |         ^^^^^^^^^^^^^^^
