tests/macros/duplicate/validate_on_key.rs
fn main() {
    let q = requestty::questions![Input {
        validate_on_key: todo!(),
        validate_on_key: todo!(),
    }];
}
